2011-04-23  Alexey Proskuryakov  <ap@apple.com>

        Reviewed by Maciej Stachowiak.

        REGRESSION (r80812): window.print();window.close() doesn't work in WebKit2
        https://bugs.webkit.org/show_bug.cgi?id=59241
        <rdar://problem/9150861>

        Covered by manual-tests/print-after-window-close.html.

        Re-fixing <https://bugs.webkit.org/show_bug.cgi?id=51357> in a way that doesn't cause the
        regression.

        * loader/MainResourceLoader.cpp: (WebCore::MainResourceLoader::didCancel): We shouldn't be
        doing complicated work while the loader is half-canceled.

        * manual-tests/print-after-window-close.html: Extended to actually print a non-empty page,
        thus being more practical.

        * page/Chrome.cpp: (WebCore::Chrome::print): Added a FIXME about a need for PageGroupLoadDeferrer.
        It's too scary for me to try now.

        * page/DOMWindow.cpp:
        (WebCore::DOMWindow::DOMWindow):
        (WebCore::DOMWindow::finishedLoading):
        * page/DOMWindow.h:
        Reverted the previous fix for <https://bugs.webkit.org/show_bug.cgi?id=51357>.

2011-04-19  Vitaly Repeshko  <vitalyr@chromium.org>

        Reviewed by Adam Barth.

        [V8] Use implicit references for V8 listeners on DOM nodes.
        https://bugs.webkit.org/show_bug.cgi?id=58953

        Instead of allocating an auxiliary V8 array referencing V8
        listener objects associated with a DOM node and using an extra
        pointer in every DOM node wrapper, we can register implicit
        references between nodes and their listeners during GC. This also
        makes V8 bindings more aligned with JSC bindings.

        No new tests because this is a refactoring.

        * bindings/scripts/CodeGeneratorV8.pm: Stopped generating the
        listener cache internal field for DOM nodes.
        * bindings/v8/V8AbstractEventListener.h: Exposed the lister handle
        to the GC.