@@ -71,7 +71,7 @@
 
 #include "ScriptController.h"
 #include "JSDOMBinding.h"
-#include <runtime/initializeThreading.h>
+#include <runtime/InitializeThreading.h>
 #include <runtime/JSValue.h>
 #include <runtime/UString.h>
 #include <wtf/text/CString.h>
