@@ -1,3 +1,9 @@
+2011-04-23  Kevin Ollivier  <kevino@theolliviers.com>
+
+        [wx] Unreviewed build fix. Fixed capitalization for case sensitive filesystems.
+
+        * WebView.cpp:
+
 2011-04-21  Ryosuke Niwa  <rniwa@webkit.org>
 
         Reviewed by Sam Weinig.
