@@ -1,3 +1,9 @@
+2011-04-23  Kevin Ollivier  <kevino@theolliviers.com>
+
+        [wx] Unreviewed build fix. Added missing header.
+        
+        * platform/graphics/filters/FEDropShadow.h:
+
 2011-04-23  Alexey Proskuryakov  <ap@apple.com>
 
         Reviewed by Maciej Stachowiak.
